grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: prometheus-stack
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001 # Choose an available port (30000-32767)
