grafana/grafana-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: prometheus-stack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.local`) # or your chosen domain
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
